[tool.poetry]
name = "shodan"
version = "0.1.0"
description = ""
authors = ["Michael Nau <michaelwnau@gmail.com>"]
license = "MIT, Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
