[tool.poetry]
name = "shodan"
version = "0.1.0"
description = ""
authors = ["Michael Nau <michaelwnau@gmail.com>"]
license = "MIT, Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^20.1.0"
fastapi = "^0.100.0"
chardet = "^5.1.0"
charset-normalizer = "^3.2.0"
pydantic = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
