[tool.poetry]
name = "shodan"
version = "0.1.0"
description = ""
authors = ["Michael Nau <michaelwnau@gmail.com>"]
license = "MIT, Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
gunicorn = "^20.1.0"
fastapi = "^0.100.0"
chardet = "^5.1.0"
charset-normalizer = "^3.2.0"
pydantic = "^2.0.2"
docker = "^6.1.3"
sqlalchemy = "^2.0.18"
alembic = "^1.11.1"
flask = "^2.3.2"
pytest = "^7.4.0"
black = "^23.3.0"
uvicorn = "^0.23.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
